--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.8.20'
+    ext.kotlin_version = '1.9.24'
     ext.appsync_version = '3.4.0'
-    ext.aws_version = '2.72.0'
+    ext.aws_version = '2.75.2'
 
     repositories {
         maven { url "https://plugins.gradle.org/m2/" }
@@ -12,7 +12,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.4'
+        classpath 'com.android.tools.build:gradle:8.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -28,6 +28,7 @@ plugins {
 }
 
 ext {
+    targetCompatibility = JavaVersion.VERSION_1_8
     projectGroup = 'com.sudoplatform'
 }
 
@@ -82,6 +83,6 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
+tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
