--- a/sudoapiclient/build.gradle
+++ b/sudoapiclient/build.gradle
@@ -10,10 +10,8 @@ android {
 
     defaultConfig {
         minSdkVersion 26
-        targetSdkVersion 33
-        versionCode 1
-        versionName "9.0.0"
-
+        targetSdkVersion 34
+        versionName "10.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: "true"
     }
@@ -69,20 +67,21 @@ dependencies {
     implementation "com.amazonaws:aws-android-sdk-appsync:$appsync_version!!"
 
     implementation "com.squareup.okhttp3:okhttp:4.12.0"
-    implementation 'com.appmattus.certificatetransparency:certificatetransparency-android:2.5.19'
+    implementation 'com.appmattus.certificatetransparency:certificatetransparency-android:2.5.42'
     constraints {
         implementation("com.squareup.okio:okio:3.4.0") {
             because "Versions earlier then 3.3.0 suffer from CVE-2023-3635 and 3.5.0+ may have compatibility issues"
         }
     }
 
-    androidTestImplementation 'androidx.test:runner:1.5.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test:runner:1.6.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation "io.kotlintest:kotlintest-assertions:3.4.2"
 
     // Sudo Platform SDKs.
-    implementation 'com.sudoplatform:sudoconfigmanager:7.0.2'
-    implementation 'com.sudoplatform:sudouser:18.0.0'
+    implementation 'com.sudoplatform:sudologging:5.0.0'
+    implementation 'com.sudoplatform:sudoconfigmanager:8.0.0'
+    implementation 'com.sudoplatform:sudouser:19.0.0'
 }
 
 // Returns a list of `configurations` which should not be scanned for vulnerabilities
@@ -131,7 +130,7 @@ licenseTools {
 @Grab('org.yaml:snakeyaml:1.17') // Yaml parser
 import org.yaml.snakeyaml.Yaml
 
-task checkLicenseHaveRequiredFields {
+tasks.register("checkLicenseHaveRequiredFields") {
     description = "Check every license entry has the mandatory fields"
     group = "verification"
     doLast {
