--- a/sudoapiclient/licenses.yml
+++ b/sudoapiclient/licenses.yml
@@ -1,9 +1,3 @@
-- artifact: com.jakewharton.timber:timber:+
-  name: Timber
-  copyrightHolder: Jake Wharton
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://github.com/JakeWharton/timber
 - artifact: androidx.vectordrawable:vectordrawable-animated:+
   name: AndroidX AnimatedVectorDrawable
   copyrightHolder: Google, Inc.
@@ -118,12 +112,6 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://developer.android.com/jetpack/androidx
-- artifact: org.jetbrains.kotlin:kotlin-stdlib-common:+
-  name: org.jetbrains.kotlin:kotlin-stdlib-common
-  copyrightHolder: JetBrains s.r.o.
-  license: The Apache License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://kotlinlang.org/
 - artifact: org.checkerframework:checker-compat-qual:+
   name: Checker Qual
   copyrightHolder: checkerframework
@@ -145,12 +133,6 @@
   url: http://developer.android.com/tools/extras/support-library.html
 - artifact: androidx.vectordrawable:vectordrawable:+
   name: Android Support VectorDrawable
-  copyrightHolder: Google, Inc.
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: http://developer.android.com/tools/extras/support-library.html
-- artifact: androidx.annotation:annotation:+
-  name: Android Support Library Annotations
   copyrightHolder: Google, Inc.
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
@@ -309,12 +291,6 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://developer.android.com/topic/libraries/architecture/index.html
-- artifact: com.squareup.okio:okio:+
-  name: Okio
-  copyrightHolder: Square, Inc.
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://github.com/square/okio/
 - artifact: org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:+
   name: kotlinx-coroutines-core
   copyrightHolder: JetBrains, Inc.
@@ -339,24 +315,6 @@
   license: The Apache License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://kotlinlang.org/
-- artifact: org.bouncycastle:bcpkix-jdk15to18:+
-  name: Bouncy Castle PKIX, CMS, EAC, TSP, PKCS, OCSP, CMP, and CRMF APIs
-  copyrightHolder: The JSR-330 Expert Group
-  license: Bouncy Castle Licence
-  licenseUrl: http://www.bouncycastle.org/licence.html
-  url: http://www.bouncycastle.org/java.html
-- artifact: org.bouncycastle:bcprov-jdk15to18:+
-  name: Bouncy Castle Provider
-  copyrightHolder: The JSR-330 Expert Group
-  license: Bouncy Castle Licence
-  licenseUrl: http://www.bouncycastle.org/licence.html
-  url: http://www.bouncycastle.org/java.html
-- artifact: org.bouncycastle:bctls-jdk15to18:+
-  name: Bouncy Castle JSSE provider and TLS/DTLS API
-  copyrightHolder: The JSR-330 Expert Group
-  license: Bouncy Castle Licence
-  licenseUrl: http://www.bouncycastle.org/licence.html
-  url: http://www.bouncycastle.org/java.html
 - artifact: androidx.lifecycle:lifecycle-viewmodel-savedstate:+
   name: Android Lifecycle ViewModel with SavedState
   copyrightHolder: Google, Inc.
@@ -387,12 +345,6 @@
   license: Eclipse Public License 1.0
   licenseUrl: http://www.eclipse.org/legal/epl-v10.html
   url: http://junit.org
-- artifact: org.bouncycastle:bcutil-jdk15to18:+
-  name: Bouncy Castle ASN.1 Extension and Utility APIs
-  copyrightHolder: The JSR-330 Expert Group
-  license: Bouncy Castle Licence
-  licenseUrl: http://www.bouncycastle.org/licence.html
-  url: http://www.bouncycastle.org/java.html
 - artifact: org.jetbrains.kotlinx:kotlinx-serialization-core-jvm:+
   name: kotlinx-serialization-core
   copyrightHolder: JetBrains, Inc.
@@ -405,30 +357,6 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: https://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://github.com/Kotlin/kotlinx.serialization
-- artifact: androidx.test.ext:junit-ktx:+
-  name: AndroidX Test Library
-  copyrightHolder: Google, Inc.
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://developer.android.com/testing
-- artifact: androidx.test:monitor:+
-  name: AndroidX Test Library
-  copyrightHolder: Google, Inc.
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://developer.android.com/testing
-- artifact: androidx.test.ext:junit:+
-  name: AndroidX Test Library
-  copyrightHolder: Google, Inc.
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://developer.android.com/testing
-- artifact: androidx.test:core:+
-  name: AndroidX Test Library
-  copyrightHolder: Google, Inc.
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://developer.android.com/testing
 - artifact: androidx.concurrent:concurrent-futures:+
   name: AndroidX Futures
   copyrightHolder: Google, Inc.
@@ -440,12 +368,6 @@
   copyrightHolder: Google, Inc.
   license: The Apache Software License, Version 2.0
   url: https://https://github.com/google/guava
-- artifact: com.amazonaws:aws-android-sdk-cognitoauth:2.42.0
-  name: AWS SDK for Android - Amazon Cognito Auth
-  copyrightHolder: Amazon
-  license: Amazon Software License
-  licenseUrl: https://aws.amazon.com/asl/
-  url: https://github.com/aws/aws-sdk-android
 - artifact: androidx.constraintlayout:constraintlayout-core:+
   name: Android ConstraintLayout Core
   copyrightHolder: Google, Inc.
@@ -464,15 +386,45 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://github.com/square/okio/
-- artifact: org.jetbrains.kotlin:kotlin-android-extensions-runtime:+
-  name: Kotlin Android Extensions Runtime
-  copyrightHolder: Jetbrains, Inc.
-  license: The Apache License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://kotlinlang.org/
 - artifact: androidx.annotation:annotation-jvm:+
   name: Android Support Library Annotations
   copyrightHolder: Google, Inc.
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://developer.android.com/jetpack/androidx/releases/annotation#1.6.0
+- artifact: androidx.profileinstaller:profileinstaller:+
+  name: androidx.profileinstaller:profileinstaller
+  copyrightHolder: Google, Inc.
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx/releases/profileinstaller#1.3.1
+- artifact: androidx.emoji2:emoji2-views-helper:+
+  name: Android Emoji2 Compat view helpers
+  copyrightHolder: Google, Inc.
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx/releases/emoji2#1.3.0
+- artifact: androidx.resourceinspection:resourceinspection-annotation:+
+  name: Android Resource Inspection - Annotations
+  copyrightHolder: Google, Inc.
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx/releases/resourceinspection#1.0.1
+- artifact: androidx.emoji2:emoji2:+
+  name: Android Emoji2 Compat
+  copyrightHolder: Google, Inc.
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx/releases/emoji2#1.3.0
+- artifact: androidx.startup:startup-runtime:+
+  name: Android App Startup Runtime
+  copyrightHolder: Google, Inc.
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx/releases/startup#1.1.1
+- artifact: androidx.lifecycle:lifecycle-process:+
+  name: Android Lifecycle Process
+  copyrightHolder: Google, Inc.
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx/releases/lifecycle#2.6.2
