--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.9.24'
-    ext.amplify_version = '2.19.1'
-    ext.aws_version = '2.75.2'
+    ext.kotlin_version = '2.1.0'
+    ext.amplify_version = '2.29.2'
+    ext.aws_version = '2.81.0'
 
     repositories {
         maven { url "https://plugins.gradle.org/m2/" }
@@ -12,19 +12,19 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.5.1'
+        classpath 'com.android.tools.build:gradle:8.12.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath "org.jmailen.gradle:kotlinter-gradle:3.16.0"
-        classpath "org.owasp:dependency-check-gradle:8.2.1"
-        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:4.0.0.2929"
+        classpath "org.jmailen.gradle:kotlinter-gradle:5.2.0"
+        classpath "org.owasp:dependency-check-gradle:12.1.3"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:6.0.1.5171"
         classpath "gradle.plugin.com.cookpad.android.plugin:plugin:1.2.8"
     }
 }
 
 plugins {
-    id "io.github.gradle-nexus.publish-plugin" version "1.3.0"
+    id "io.github.gradle-nexus.publish-plugin" version "2.0.0"
 }
 
 ext {
@@ -49,6 +49,7 @@ if (project.findProperty("tag") && sonatypeStagingProfileId) {
     nexusPublishing {
         repositories {
             sonatype {
+                nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
                 stagingProfileId = sonatypeStagingProfileId
                 username = nexusUsername
                 password = nexusPassword
