--- a/sudoapiclient/build.gradle
+++ b/sudoapiclient/build.gradle
@@ -6,12 +6,12 @@ apply plugin: "org.owasp.dependencycheck"
 android {
     namespace 'com.sudoplatform.sudoapiclient'
 
-    compileSdk 34
+    compileSdkVersion 35
 
     defaultConfig {
         minSdkVersion 26
-        targetSdkVersion 34
-        versionName "11.1.1"
+        targetSdkVersion 35
+        versionName "12.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: "true"
     }
@@ -38,6 +38,7 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
+        coreLibraryDesugaringEnabled true
     }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_17.toString()
@@ -58,6 +59,9 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    // Core library desugaring
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
+
     // AWS SDKs
     //
     // AWS SDKs do not follow semantic versioning rules so we need to strictly specify AWS SDK versions.
@@ -71,22 +75,17 @@ dependencies {
     implementation "com.amplifyframework:aws-api:$amplify_version"
     implementation "com.amplifyframework:aws-auth-cognito:$amplify_version"
 
-    implementation "com.squareup.okhttp3:okhttp:4.12.0"
-    implementation 'com.appmattus.certificatetransparency:certificatetransparency-android:2.5.42'
-    constraints {
-        implementation("com.squareup.okio:okio:3.4.0") {
-            because "Versions earlier then 3.3.0 suffer from CVE-2023-3635 and 3.5.0+ may have compatibility issues"
-        }
-    }
+    implementation "com.squareup.okhttp3:okhttp:5.1.0"
+    implementation 'com.appmattus.certificatetransparency:certificatetransparency-android:2.8.2'
 
-    androidTestImplementation 'androidx.test:runner:1.6.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test:runner:1.7.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
     androidTestImplementation "io.kotlintest:kotlintest-assertions:3.4.2"
 
     // Sudo Platform SDKs.
-    implementation 'com.sudoplatform:sudologging:5.0.0'
-    implementation 'com.sudoplatform:sudoconfigmanager:8.0.0'
-    implementation 'com.sudoplatform:sudouser:20.0.0'
+    implementation 'com.sudoplatform:sudologging:6.0.0'
+    implementation 'com.sudoplatform:sudoconfigmanager:9.0.0'
+    implementation 'com.sudoplatform:sudouser:21.0.0'
 }
 
 // Returns a list of `configurations` which should not be scanned for vulnerabilities
@@ -115,11 +114,8 @@ afterEvaluate {
         suppressionFile file("../dependency-suppression.xml").toString()
         failBuildOnCVSS 0
         skipConfigurations = getConfigurationsToSkip(configurations)
-        cve {
-            urlModified = "https://anonyome-nist-cve-mirror.s3.amazonaws.com/nvdcve-1.1-modified.json.gz"
-            urlBase = "https://anonyome-nist-cve-mirror.s3.amazonaws.com/nvdcve-1.1-%d.json.gz"
-            startYear = 2002
-            waitTime = 0
+        nvd {
+            datafeedUrl = "https://anonyome-nist-cve-mirror.s3.amazonaws.com/"
         }
     }
 }
@@ -149,7 +145,7 @@ tasks.register("checkLicenseHaveRequiredFields") {
                     errors.append("License entry '${artifact.artifact}' is missing required element `$field`\n")
                 }
             }
-            if (artifact["license"] == null && artifact["licenseUrl" == null]) {
+            if (artifact["license"] == null && artifact["licenseUrl"] == null) {
                 errors.append("License entry '${artifact.artifact}' must have one of [license,licenseUrl]\n")
             }
         }
@@ -164,7 +160,6 @@ checkLicenses.finalizedBy checkLicenseHaveRequiredFields
 apply plugin: 'org.jmailen.kotlinter'
 
 kotlinter {
-    ignoreFailures = false
     reporters = ['checkstyle', 'plain']
 }
 
@@ -195,4 +190,3 @@ if(project.findProperty("tag") &&
 else if (project.file("${rootProject.projectDir}/util/publish-internal-android.gradle").exists()) {
     apply from: "${rootProject.projectDir}/util/publish-internal-android.gradle"
 }
-
