--- a/sudoapiclient/licenses.yml
+++ b/sudoapiclient/licenses.yml
@@ -174,8 +174,8 @@
 - artifact: com.amazonaws:aws-android-sdk-core:+
   name: AWS SDK for Android - Core Runtime
   copyrightHolder: Amazon
-  license: Amazon Software License
   url: http://aws.amazon.com/sdkforandroid
+  licenseUrl: http://aws.amazon.com/asl/
 - artifact: com.nytimes.android:cache:+
   name: com.nytimes.android
   copyrightHolder: New York Times
@@ -213,13 +213,11 @@
 - artifact: com.amazonaws:aws-android-sdk-cognitoidentityprovider-asf:+
   name: AWS SDK for Android - Amazon Cognito Identity Provider ASF
   copyrightHolder: Amazon
-  license: Amazon Software License
   licenseUrl: http://aws.amazon.com/asl/
   url: http://aws.amazon.com/sdkforandroid
 - artifact: com.amazonaws:aws-android-sdk-cognitoidentityprovider:+
   name: AWS SDK for Android - Amazon Cognito Identity Provider
   copyrightHolder: Amazon
-  license: Amazon Software License
   licenseUrl: http://aws.amazon.com/asl/
   url: http://aws.amazon.com/sdkforandroid
 - artifact: com.amazonaws:aws-android-sdk-mobile-client:+
@@ -236,8 +234,8 @@
 - artifact: com.amazonaws:aws-android-sdk-s3:+
   name: AWS SDK for Android - Amazon S3
   copyrightHolder: Amazon
-  license: Amazon Software License
   url: http://aws.amazon.com/sdkforandroid
+  licenseUrl: http://aws.amazon.com/asl/
 - artifact: com.madgag.spongycastle:prov:+
   name: Spongy Castle
   copyrightHolder: The JSR-330 Expert Group
@@ -259,8 +257,8 @@
 - artifact: com.amazonaws:aws-android-sdk-kms:+
   name: AWS SDK for Android - AWS KMS
   copyrightHolder: Amazon
-  license: Amazon Software License
   url: http://aws.amazon.com/sdkforandroid
+  licenseUrl: http://aws.amazon.com/asl/
 - artifact: com.madgag.spongycastle:bcpkix-jdk15on:+
   name: Spongy Castle
   copyrightHolder: The JSR-330 Expert Group
@@ -377,7 +375,6 @@
 - artifact: com.amazonaws:aws-android-sdk-cognitoauth:+
   name: AWS SDK for Android - Amazon Cognito Auth
   copyrightHolder: Amazon
-  license: Amazon Software License
   licenseUrl: https://aws.amazon.com/asl/
   url: https://github.com/aws/aws-sdk-android
 - artifact: com.squareup.okio:okio-jvm:+
@@ -559,12 +556,6 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: http://developer.android.com/tools/extras/support-library.html
-- artifact: com.apollographql.apollo3:apollo-runtime-jvm:+
-  name: Apollo GraphQL Runtime
-  copyrightHolder: Apollo Graph Inc
-  license: MIT License
-  licenseUrl: https://raw.githubusercontent.com/apollographql/apollo-kotlin/main/LICENSE
-  url: https://github.com/apollographql/apollo-kotlin/
 - artifact: aws.sdk.kotlin:cognitoidentityprovider-jvm:+
   name: cognitoidentityprovider
   copyrightHolder: Amazon
@@ -649,12 +640,6 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://developer.android.com/jetpack/androidx
-- artifact: com.apollographql.apollo3:apollo-annotations-jvm:+
-  name: Apollo GraphQL Annotations
-  copyrightHolder: Apollo Graph Inc
-  license: MIT License
-  licenseUrl: https://raw.githubusercontent.com/apollographql/apollo-kotlin/main/LICENSE
-  url: https://github.com/apollographql/apollo-kotlin/
 - artifact: com.amplifyframework:aws-auth-cognito:+
   name: Amplify Framework for Android - Auth
   copyrightHolder: Amazon
@@ -679,12 +664,6 @@
   license: The Apache License, Version 2.0
   licenseUrl: https://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://github.com/awslabs/smithy-kotlin
-- artifact: com.apollographql.apollo3:apollo-mpp-utils-jvm:+
-  name: Apollo MPP Utils
-  copyrightHolder: Apollo Graph Inc
-  license: MIT License
-  licenseUrl: https://raw.githubusercontent.com/apollographql/apollo-kotlin/main/LICENSE
-  url: https://github.com/apollographql/apollo-kotlin/
 - artifact: com.amplifyframework:core:+
   name: Amplify Framework for Android - Core
   copyrightHolder: Amazon
@@ -829,12 +808,6 @@
   license: The Apache License, Version 2.0
   licenseUrl: https://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://github.com/awslabs/smithy-kotlin
-- artifact: com.apollographql.apollo3:apollo-api-jvm:+
-  name: Apollo GraphQL API
-  copyrightHolder: Apollo Graph Inc
-  license: MIT License
-  licenseUrl: https://raw.githubusercontent.com/apollographql/apollo-kotlin/main/LICENSE
-  url: https://github.com/apollographql/apollo-kotlin/
 - artifact: androidx.navigation:navigation-fragment:+
   name: Android Navigation Fragment
   copyrightHolder: Google, Inc.
@@ -847,3 +820,95 @@
   license: The Apache License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://kotlinlang.org/
+- artifact: com.google.android.gms:play-services-auth-api-phone:+
+  name: play-services-auth-api-phone
+  copyrightHolder: Google Inc.
+  license: Android Software Development Kit License
+  licenseUrl: https://developer.android.com/studio/terms.html
+  url: https://developer.android.com
+- artifact: com.google.android.gms:play-services-auth-base:+
+  name: play-services-auth-base
+  copyrightHolder: Google Inc.
+  license: Android Software Development Kit License
+  licenseUrl: https://developer.android.com/studio/terms.html
+  url: https://developer.android.com
+- artifact: com.google.android.gms:play-services-auth:+
+  name: play-services-auth
+  copyrightHolder: Google Inc.
+  license: Android Software Development Kit License
+  licenseUrl: https://developer.android.com/studio/terms.html
+  url: https://developer.android.com
+- artifact: com.google.android.gms:play-services-base:+
+  name: play-services-base
+  copyrightHolder: Google Inc.
+  license: Android Software Development Kit License
+  licenseUrl: https://developer.android.com/studio/terms.html
+  url: https://developer.android.com
+- artifact: com.google.android.gms:play-services-fido:+
+  name: play-services-fido
+  copyrightHolder: Google Inc.
+  license: Android Software Development Kit License
+  licenseUrl: https://developer.android.com/studio/terms.html
+  url: https://developer.android.com
+- artifact: com.google.android.libraries.identity.googleid:googleid:+
+  name: googleid
+  copyrightHolder: Google Inc.
+  license: Android Software Development Kit License
+  licenseUrl: https://developer.android.com/studio/terms.html
+  url: https://developer.android.com
+- artifact: com.squareup.okhttp3:okhttp-jvm:+
+  name: okhttp-jvm
+  copyrightHolder: Square, Inc.
+  license: The Apache Software License, Version 2.0
+  licenseUrl: https://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://square.github.io/okhttp/
+- artifact: androidx.credentials:credentials-play-services-auth:+
+  name: credentials-play-services-auth
+  copyrightHolder: Google, Inc.
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx/releases/credentials#1.3.0
+- artifact: androidx.credentials:credentials:+
+  name: credentials
+  copyrightHolder: Google, Inc.
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx/releases/credentials#1.3.0
+- artifact: com.apollographql.apollo:apollo-annotations-jvm:+
+  name: apollo-annotations-jvm
+  copyrightHolder: Apollo Graph Inc
+  license: MIT
+  url: https://github.com/apollographql/apollo-kotlin/
+- artifact: com.apollographql.apollo:apollo-api-jvm:+
+  name: apollo-api-jvm
+  copyrightHolder: Apollo Graph Inc
+  license: MIT
+  url: https://github.com/apollographql/apollo-kotlin/
+- artifact: com.apollographql.apollo:apollo-mpp-utils-jvm:+
+  name: apollo-mpp-utils-jvm
+  copyrightHolder: Apollo Graph Inc
+  license: MIT
+  url: https://github.com/apollographql/apollo-kotlin/
+- artifact: com.apollographql.apollo:apollo-runtime-jvm:+
+  name: apollo-runtime-jvm
+  copyrightHolder: Apollo Graph Inc
+  license: MIT
+  url: https://github.com/apollographql/apollo-kotlin/
+- artifact: com.google.android.gms:play-services-basement:+
+  name: play-services-basement
+  copyrightHolder: Google, Inc.
+  license: Android Software Development Kit License
+  licenseUrl: https://developer.android.com/studio/terms.html
+  url: https://developer.android.com
+- artifact: com.google.android.gms:play-services-tasks:+
+  name: play-services-tasks
+  copyrightHolder: Google, Inc.
+  license: Android Software Development Kit License
+  licenseUrl: https://developer.android.com/studio/terms.html
+  url: https://developer.android.com
+- artifact: com.google.errorprone:error_prone_annotations:+
+  name: error_prone_annotations
+  copyrightHolder: Google, Inc.
+  license: Apache 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com
